// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider components Grid configProvider 1`] = `
<div
  class="config-row"
>
  <div
    class="config-col config-col-1"
  />
</div>
`;

exports[`ConfigProvider components Grid configProvider componentSize large 1`] = `
<div
  class="config-row"
>
  <div
    class="config-col config-col-1"
  />
</div>
`;

exports[`ConfigProvider components Grid configProvider componentSize middle 1`] = `
<div
  class="config-row"
>
  <div
    class="config-col config-col-1"
  />
</div>
`;

exports[`ConfigProvider components Grid configProvider virtual and dropdownMatchSelectWidth 1`] = `
<div
  class="ant-row"
>
  <div
    class="ant-col ant-col-1"
  />
</div>
`;

exports[`ConfigProvider components Grid normal 1`] = `
<div
  class="ant-row"
>
  <div
    class="ant-col ant-col-1"
  />
</div>
`;

exports[`ConfigProvider components Grid prefixCls 1`] = `
<div
  class="prefix-row"
>
  <div
    class="prefix-col prefix-col-1"
  />
</div>
`;
